--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularElectron</title>
+  <title>Student Info</title>
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body style="background-color:white">
+  <div style="background-color: #2196F3 !important; color: white;" class="row shadow-sm p-3 mb-5 bg-light">
+    <div class="col-md-9">
+        <h5 style="font-weight: 300"><i class="fa fa-book icon" aria-hidden="true"></i>Laura's Student Info</h5>
+    </div>
+    <div class="col-md-1">
+      <i class="fa fa-pencil icon" aria-hidden="true"></i>Some
+    </div>
+    <div class="col-md-1">
+      <i class="fa fa-user icon" aria-hidden="true"></i>Other
+    </div>
+    <div class="col-md-1">
+      <i class="fa fa-table icon" aria-hidden="true"></i>Buttons
+    </div>
+  </div>
+    <div>
+        <app-root></app-root>
+    </div> 
 </body>
 </html>
