--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body style="background-color:white">
   <div style="background-color: #2196F3 !important; color: white;" class="row shadow-sm p-3 mb-5 bg-light">
     <div class="col-md-9">
-        <h5 style="font-weight: 300"><i class="fa fa-book icon" aria-hidden="true"></i>Laura's Student Info</h5>
+        <h5 style="font-weight: 300"><i class="fa fa-book icon" aria-hidden="true"></i>Student Info</h5>
     </div>
     <div class="col-md-1">
       <i class="fa fa-pencil icon" aria-hidden="true"></i>Some
